flapivor/tests/tests-m3/hopix/typechecker/bad/noarg.hopix
fun f () : unit = f (0)

val test : unit = f ()